# snake

./: .gitignore  CMakeLists.txt  autogen.sh
src/: .snake.cpp.swp  matrix.cpp  snake.cpp  utils.h
